<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".activity.FakeActivity"
    android:id="@+id/linearLayout"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginBottom="100dp"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="change me"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/editText" />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Change Background Color"
        android:layout_marginBottom="10dp"
        android:id="@+id/colorSpinner" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Launch Activity"
        android:layout_marginBottom="10dp"
        android:id="@+id/launchActivityButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
